--- a/BookingHutech/BookingHutech.csproj
+++ b/BookingHutech/BookingHutech.csproj
@@ -722,6 +722,7 @@
     <Content Include="Scripts\jquery\src\var\toString.js" />
     <Content Include="Scripts\jquery\src\wrap.js" />
     <Content Include="Scripts\jvectormap\jquery-jvectormap.css" />
+    <Content Include="wwwroot\controller\account\changePasswordController.js" />
     <Content Include="wwwroot\controller\account\loginController.js" />
     <Content Include="wwwroot\controller\app\appController.js" />
     <Content Include="wwwroot\controller\home\homeController.js" />
@@ -1177,6 +1178,7 @@
     <Content Include="script\js\nprogress.js" />
     <Content Include="script\js\skycons.js" />
     <Content Include="script\css\translateelement.css" />
+    <Content Include="wwwroot\views\pages\account\changePassword.html" />
     <Content Include="wwwroot\views\pages\account\login.html" />
     <Content Include="wwwroot\views\pages\home\home.html" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
